# det

./: Agents.md  DET_Applications_Report.md  DET_Concurrent_Regimes_Analysis.md  DET_Local_Transition_Report.md  DET_Selfhood_Test_Report.md  DET_Transition_Dynamics_Report.md  DET_v6.5_Final_Report.md  DET_v65_Agency_First_Appendix.md  DET_v65_Exhaustive_Review.md  DET_v7_Refactor_Report.md  Exploratory_Deep_Dive_PreExisting_Spirit.md  Exploratory_Deep_Dive_Spirit_ProtoBoundary.md  LICENSE  README.md
det_3x_falsified/: README.md  SIMULATABLE.md
det_3x_falsified/docs/: det_302_applications.md  det_302_derivations.md  living_in_the_present.md  physics.md
det_4x/docs/: DET_Theory_Card_v4.2_bridge.md
det_5x_draft/docs/: det_angular_momentum_v6_spec.md  project_instruction_prompt_relaxed.txt  project_instruction_prompt_rigorous.txt
det_6/: failsifiability_steps.md
det_6/det_v6_release/: README.md
det_v6_2/: PROJECT_STATUS_v6_2.md  README.md
det_v6_2/docs/: G_extraction_methodology.md  consistency_review.md  det_theory_card_6_1.md  next_steps.md
det_v6_2/failed/: README.md
det_v6_2/passed/: README.md  det_quantum_proper.py  det_quantum_proper_v6_2.py
det_v6_2/src/: _temp.py
det_v6_3/calibration/: black_hole_thermodynamics.py  cosmological_scaling.py  quantum_classical_transition.py
det_v6_3/dna_analysis/: __init__.py  det_subdivision_strict.py  det_subdivision_theory.py  dna_database_fetcher.py  dna_det_analyzer.py  dna_det_deep_analysis.py
det_v6_3/docs/: DET_Radioactive_Decay_Analysis.md  acoustic_diode_applications.md  acoustic_diode_design.md  acoustic_diode_experiments.md  acoustic_diode_physics_corrected.md  afterlife_and_spirit_agency_in_det.md  det_aging_as_structural_debt.md  det_c1_consciousness_module.md  det_debt_aging_spirit_synthesis.md  det_materials_bio_review.md  det_model_v7_0.md  det_spirit_mode_bioeng_protocols.md  det_structural_debt_applications.md  det_structural_debt_index.md  det_subdivision_extension.md  det_theory_card_6_3.md  det_theory_card_6_3_q_mutable_exploration.md  det_theory_card_6_5.md  det_theory_card_7_0.md  momentum_directional_materials.md  passive_panel_designs_corrected.md  readout_spec_v1.md  v7_migration_deprecation_map.md
det_v6_3/reports/: det_c1_consciousness_simulation_report_2026_03_06.md  det_c1_forgiveness_mutability_study_report_2026_03_06.md  det_sigma_deep_study_report_2026_03_06.md  det_sigma_deep_study_results_2026_03_06.json  det_sigma_factor_study_report_2026_03_06.md  det_spirit_ministration_study_report_2026_03_09.md  det_spirit_ministration_study_results_2026_03_09.json
det_v6_3/research/: rrs_research_applications.py
det_v6_3/src/: app_computing.py  app_materials.py  det_concurrent_regimes.py  det_consciousness_c1.py  det_radioactive_decay.py  det_rrs.py  det_si_units.py  det_unified_params.py  det_v6_3_1d_collider.py  det_v6_3_2d_collider.py  det_v6_3_3d_collider.py  det_v6_3_collider_torch.py  triple_lock_resolution.py
det_v6_3/tests/: analyze_parameters.py  det_c1_consciousness_simulation.py  det_c1_forgiveness_mutability_study.py  det_comprehensive_falsifiers.py  det_sigma_deep_study.py  det_sigma_factor_study.py  det_spirit_ministration_study.py  det_v65_falsifiers.py  det_v65b_falsifiers.py  diagnose_orbit_failure.py  test_acoustic_diode.py  test_acoustic_diode_corrected.py  test_bell_retrocausal.py  test_consciousness_c1.py  test_cosmological_scaling.py  test_gravity_profile.py  test_kepler_optimized.py  test_kepler_standard_candle.py  test_momentum_directional_materials.py  test_q_mutable_local_grace.py  test_quantum_classical_transition.py  test_rrs.py  test_si_units.py  test_structural_debt.py  test_unified_params.py
det_v6_3/validation/: __init__.py
det_v6_4/docs/: Structural_Debt_Decomp_Recover.md
det_v7_0/calibration/: black_hole_thermodynamics.py  extract_g_calibration.py  galaxy_rotation_curves.py  gravitational_lensing.py  quantum_classical_transition.py
det_v7_0/core/: __init__.py  agency.py  boundary.py  flow.py  gravity.py  presence.py  structure.py  update_loop.py
det_v7_0/dna_analysis/: det_subdivision_v3.py
det_v7_0/docs/: DET_4D_Collider_Proposal.md  DET_4D_Research_Report.md  bell_ceiling_declaration.md  coexisting_kingdom_in_det.md  det_model_v7_0.md  det_resurrection_dual_mode.md  det_spirit_debt_applications.md  det_structural_debt.md  det_structural_debt_index.md  det_subdivision_strict_core.md  det_theory_card_6_3.md  det_theory_card_6_5.md  det_theory_card_6_5_1.md  det_theory_card_7_0.md  det_v7_applications_review.md  parameter_metrology.md  (+5 more)
docs/: det_302_constants_and_params.md  det_302_core.md  det_302_derivations.md  det_302_nomenclature.md  det_302_unified.md  physics.md
local_agency/: .gitignore  CLAUDE.md  DEVELOPMENT_LOG.md  FEASIBILITY_PLAN.md  GETTING_STARTED.md  ROADMAP_V2.md  requirements.txt  setup_det.py  upgrade.py
local_agency/src/det_core/: CMakeLists.txt
local_agency/src/det_core/include/: det_core.h
local_agency/src/det_core/src/: det_core.c  eis_vm.c
local_agency/src/det_core/tests/: test_det_core.c  test_eis_vm.c
local_agency/src/inference/: .gitignore  CMakeLists.txt
local_agency/src/inference/include/: det_gguf.h  det_model.h  det_ssm.h  det_tensor.h  det_tensor_metal.h  det_tokenizer.h
local_agency/src/inference/metal/: tensor_metal.m  tensor_shaders.metal
local_agency/src/inference/src/: det_gguf.c  det_model.c  det_ssm.c  det_tensor.c  det_tokenizer.c
local_agency/src/inference/tests/: test_gguf.c  test_ssm.c  test_tensor.c
local_agency/src/substrate/: .gitignore  CMakeLists.txt
local_agency/src/substrate/include/: effect_table.h  eis_substrate.h  eis_substrate_v2.h  substrate_lattice.h  substrate_metal.h  substrate_types.h
local_agency/src/substrate/metal/: CMakeLists.txt  metal_backend.m  substrate_shaders.metal
local_agency/src/substrate/src/: eis_substrate.c  eis_substrate_v2.c  substrate_lattice.c  substrate_metal.c
local_agency/src/substrate/tests/: test_metal.c  test_substrate.c  test_substrate_v2.c
previous/: det_theory_card_5_0.md
website/: index.html  package-lock.json  package.json
(+456 files in other folders)
